glx/testdata/invalid/missing-required-fields/assertions/assertion-missing-subject.glx
assertions:
  assertion-missing-subject:
    claim: name
    value: "John"
    citations:
      - citation-123


